<resources>
    <string name="app_name">Bai1_Lab02_23520266_PhanHongDat</string>
    <string name="case1">Trường hợp 1</string>
    <string name="case2">Trường hợp 2</string>
    <string name="case3">Trường hợp 3</string>
    <string name="case4">Trường hợp 4</string>
    <string name="case5">Trường hợp 5</string>
    <string name="Bai6">Bài 6</string>

    <string name="input">Nhập tên: </string>
    <string name="btnInput">NHẬP</string>

    <string name="tv_quanly_nhanvien">Quản lý nhân viên</string>
    <string name="tv_manv">Mã NV: </string>
    <string name="tv_tennv">Tên NV: </string>
    <string name="tv_loainv">Loại NV: </string>
    <string name="lb_chinhthuc">Chính thức</string>
    <string name="lb_thoivu">Thời vụ</string>
    <string name="btn_nhap_nv">Nhập NV</string>

    <string name="staff">Staff</string>
    <string name="tv_id">ID: </string>
    <string name="tv_fullname">Full Name: </string>
    <string name="tv_ismanager">Is Manager: </string>
    <string name="btn_add">ADD</string>"


    <string name="name">Name: </string>
    <string name="thumbnail">Thumbnail</string>
    <string name="promotion">Promotion</string>
    <string name="add">ADD A NEW DISH</string>
</resources>