<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tv_personalinfor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="LAB 02 23520266 PHAN HỒNG ĐẠT" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_case1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_personalinfor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="@dimen/margin_basex4"
        android:text="@string/case1"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_case2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_case1"
        app:layout_constraintTop_toTopOf="@+id/btn_case1"
        android:layout_marginLeft="@dimen/margin_basex4"
        android:text="@string/case2"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_case3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_case1"
        app:layout_constraintStart_toStartOf="@+id/btn_case1"
        android:text="@string/case3"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_case4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btn_case2"
        app:layout_constraintTop_toBottomOf="@id/btn_case2"
        android:text="@string/case4"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_case5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_case3"
        app:layout_constraintStart_toStartOf="@id/btn_case3"
        android:text="@string/case5"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Bai6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/btn_case4"
        app:layout_constraintTop_toBottomOf="@id/btn_case4"
        android:text="@string/Bai6"/>
</androidx.constraintlayout.widget.ConstraintLayout>