<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".case3_lab02">

    <TextView
        android:id="@+id/tv_case3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/normal_blue"
        android:text="@string/tv_quanly_nhanvien"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_manv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_manv"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_case3" />

    <EditText
        android:id="@+id/et_manv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="Nhập mã nhân viên"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_manv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_manv" />

    <TextView
        android:id="@+id/tv_tennv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_tennv"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_manv" />

    <EditText
        android:id="@+id/et_tennv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="Nhập tên nhân viên"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_tennv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_tennv" />

    <RadioGroup
        android:id="@+id/rg_loai_nv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@+id/tv_Loainv"
        app:layout_constraintTop_toBottomOf="@+id/et_tennv"
        android:layout_marginLeft="@dimen/margin_basex4">

        <RadioButton
            android:id="@+id/rb_chinhthuc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/lb_chinhthuc"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_tamthoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lb_thoivu"
            android:textSize="16sp"
            android:layout_marginLeft="40dp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/tv_Loainv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_loainv"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rg_loai_nv"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_nhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_nhap_nv"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_loai_nv" />

    <ListView
        android:id="@+id/lv_ds_nhanvien"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_nhap"
        />

</androidx.constraintlayout.widget.ConstraintLayout>