<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".case3_lab02">

    <TextView
        android:id="@+id/tv_case4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/normal_blue"
        android:text="@string/tv_quanly_nhanvien"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_manv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_id"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_case4" />

    <EditText
        android:id="@+id/et_manv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="Nhập mã nhân viên"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_manv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_manv" />

    <TextView
        android:id="@+id/tv_tennv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_fullname"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_manv" />

    <EditText
        android:id="@+id/et_tennv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="Nhập tên nhân viên"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_tennv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_tennv" />

    <CheckBox
        android:id="@+id/cb_ismanager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_ismanager"
        app:layout_constraintTop_toBottomOf="@+id/et_tennv"
        android:layout_marginLeft="@dimen/margin_basex4"/>

    <TextView
        android:id="@+id/tv_ismanager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_ismanager"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/cb_ismanager"
        app:layout_constraintLeft_toRightOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_nhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_add"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_ismanager" />

    <ListView
        android:id="@+id/lv_ds_nhanvien"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_nhap" />

</androidx.constraintlayout.widget.ConstraintLayout>