<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".case2_lab02">
<TextView
    android:id="@+id/tv_header_case2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:text="@string/case2"
    android:textSize="@dimen/text_large"/>
    <TextView
        android:id="@+id/tv_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_case2"
        android:text="@string/input"
        android:background="@color/normal_blue"
        android:textSize="@dimen/text_medium"
        android:layout_marginTop="@dimen/margin_basex4"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/et_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_input"
        app:layout_constraintStart_toEndOf="@id/tv_input"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_basex4"
        android:text="@string/btnInput"/>
    <ListView
        android:id="@+id/lv_list_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_input"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin_base"/>
</androidx.constraintlayout.widget.ConstraintLayout>