<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et_dish_name"
        android:textSize="18sp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/et_dish_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nhập tên món ăn"
        app:layout_constraintBottom_toBottomOf="@+id/tv_food_name"
        app:layout_constraintLeft_toRightOf="@+id/tv_food_name"
        app:layout_constraintStart_toEndOf="@id/tv_food_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/margin_base"/>
    <TextView
        android:id="@+id/tv_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_dish_name"
        android:text="@string/thumbnail"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/margin_basex4"/>

    <Spinner
        android:id="@+id/spinner_thumbnail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_basex4"
        android:spinnerMode="dialog"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/tv_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/et_dish_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_thumbnail"
        app:layout_constraintStart_toEndOf="@id/tv_thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/margin_base"/>
    <TextView
        android:id="@+id/tv_promotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_thumbnail"
        android:text="@string/promotion"
        android:layout_marginTop="@dimen/margin_basex4"
        android:textSize="@dimen/text_medium"/>
    <CheckBox
        android:id="@+id/cb_promotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_basex2"
        app:layout_constraintStart_toEndOf="@id/tv_promotion"
        app:layout_constraintTop_toBottomOf="@+id/spinner_thumbnail"
        android:textColorHighlight="@color/normal_blue"
        android:layout_marginLeft="@dimen/margin_base"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_promotion" />

    <GridView
        android:id="@+id/grid_view_dishes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:horizontalSpacing="10dp"
        android:numColumns="2"
        android:verticalSpacing="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_dish" />

</androidx.constraintlayout.widget.ConstraintLayout>